        SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                               Release History
===========================================================================

3.3 to 3.4: (xx. xx, 2010)

  * Updated built-in version of the PNG library to the latest version.

  * Updated internal ROM properties database to ROM-Hunter version 6
    (thanks go to RomHunter for his tireless research in this area).

  * The ROM audit dialog now automatically selects the current
    directory in the ROM launcher, and reloads the directory after
    the audit is complete.

-Have fun!


3.2.2 to 3.3: (November 12, 2010)

  * Added the following Distella 'directives', which are used to override
    and specifically tell the debugger how to treat address space (CODE,
    GFX, PGFX, DATA, ROW).  See the debugger documentation for more
    information.

  * Disassembly from the debugger is now tracked by the emulation core,
    and accented by the built-in Distella code.  Basically, the emulation
    core knows when an address is referenced as code, making for very
    accurate disassembled output.  Related to this, the emulation core now
    tracks accesses to GRPx and PFx registers, automatically marking the
    addresses as GFX or PGFX sections.  This will be improved in future
    releases, as there are many ways to store data in the graphics
    registers.

  * Improved output of graphics output in the disassembler, by marking
    such addresses with a bitmap of the data they represent.  This
    allows player graphics (GFX directive) and playfield graphics (PGFX
    directive) to really stand out in the disassembly.  Related to this,
    added ability to edit such graphics in either binary or hexidecimal.

  * Added preliminary support for Distella configuration files.  Much